--- a/frontEnd/src/app/home/home.page.html
+++ b/frontEnd/src/app/home/home.page.html
@@ -13,6 +13,10 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-content>
+    <ion-button expand="block" (click)="gotoCarsForm()" style="max-width: 200px">Crear coche</ion-button>
+    <ion-button expand="block" (click)="gotoCarsList()" style="max-width: 200px">Ver los coches</ion-button>
+  </ion-content>
 
 
 
