--- a/frontEnd/src/app/cars-form/cars-form.page.html
+++ b/frontEnd/src/app/cars-form/cars-form.page.html
@@ -1,6 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>cars-form</ion-title>
+    <ion-button expand="block" (click)="gotoCarsList()" style="max-width: 200px">Ver coches</ion-button>
+    <ion-button expand="block" (click)="gotoCarsHome()" style="max-width: 200px">Home</ion-button>
   </ion-toolbar>
 </ion-header>
 
