--- a/frontEnd/src/app/cars-list/modal/modal.component.html
+++ b/frontEnd/src/app/cars-list/modal/modal.component.html
@@ -11,6 +11,9 @@
 </ion-header>
 <ion-content class="ion-padding">
   <ion-item>
-    <ion-input labelPlacement="stacked" label="Enter your name" [(ngModel)]="name" placeholder="Your name"></ion-input>
+    <ion-input labelPlacement="stacked" label="Marca" [(ngModel)]="brand" placeholder="Marca del coche"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input labelPlacement="stacked" label="Modelo" [(ngModel)]="model" placeholder="Modelo del coche"></ion-input>
   </ion-item>
 </ion-content>
