--- a/frontEnd/src/app/cars-form/cars-form.page.html
+++ b/frontEnd/src/app/cars-form/cars-form.page.html
@@ -1,17 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>cars-form</ion-title>
-    <ion-button expand="block" (click)="gotoCarsList()" style="max-width: 200px">Ver coches</ion-button>
-    <ion-button expand="block" (click)="gotoCarsHome()" style="max-width: 200px">Home</ion-button>
+    <ion-title class="ion-text-center" color="dark">Formulario de coches</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">cars-form</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="disp-flex">
+    <ion-button expand="block" (click)="gotoCarsList()" style="max-width: 200px">Ver coches</ion-button>
+    <ion-button expand="block" (click)="gotoCarsHome()" style="max-width: 200px">Home</ion-button>
+  </div>
 
   <form [formGroup]="carForm" (ngSubmit)="createCar()">
     <ion-item>
