--- a/frontEnd/src/app/home/home.page.html
+++ b/frontEnd/src/app/home/home.page.html
@@ -1,23 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
+    <ion-title class="ion-text-center" color="dark">
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-content>
-    <ion-button expand="block" (click)="gotoCarsForm()" style="max-width: 200px">Crear coche</ion-button>
-    <ion-button expand="block" (click)="gotoCarsList()" style="max-width: 200px">Ver los coches</ion-button>
-  </ion-content>
-
-
-
-</ion-content>
+<ion-content class="ion-padding">
+  <div class="disp-flex">
+    <ion-button expand="block" (click)="gotoCarsForm()">Crear coche</ion-button>
+    <ion-button expand="block" (click)="gotoCarsList()">Ver los coches</ion-button>
+  </div>
