--- a/frontEnd/src/theme/variables.scss
+++ b/frontEnd/src/theme/variables.scss
@@ -1,7 +1,7 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
 :root {
-  --ion-color-primary: #69e2c4;
+  --ion-color-primary: #c3eae0;
   --ion-color-primary-rgb: 105, 226, 196;
   --ion-color-primary-contrast: #000000;
   --ion-color-primary-contrast-rgb: 0, 0, 0;
