--- a/frontEnd/src/app/cars-form/cars-form.page.html
+++ b/frontEnd/src/app/cars-form/cars-form.page.html
@@ -1,32 +1,37 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title class="ion-text-center" color="dark">Formulario de coches</ion-title>
+    <ion-title class="ion-text-center" color="carapp">CarZone</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
   <div class="disp-flex">
-    <ion-button expand="block" (click)="gotoCarsList()" style="max-width: 200px">Ver coches</ion-button>
-    <ion-button expand="block" (click)="gotoCarsHome()" style="max-width: 200px">Home</ion-button>
+    <ion-button expand="block" (click)="gotoCarsHome()">Home</ion-button>
+    <ion-button expand="block" (click)="gotoCarsForm()">Crear coche</ion-button>
+    <ion-button expand="block" (click)="gotoCarsList()">Ver coches</ion-button>
   </div>
 
-  <form [formGroup]="carForm" (ngSubmit)="createCar()">
-    <ion-item>
-      <ion-label position="floating">Marca</ion-label>
-      <ion-input type="text" formControlName="brand"></ion-input>
-    </ion-item>
-    <ion-note color="danger" *ngIf="getFormControl('brand')?.hasError('required') && getFormControl('brand')?.touched">
-      La marca es obligatoria
-    </ion-note>
+  <h1>Crear un coche</h1>
+  <form class="form-container" [formGroup]="carForm" (ngSubmit)="createCar()">
+    <div class="form-content">
+      <ion-item>
+        <ion-label position="floating">Marca</ion-label>
+        <ion-input type="text" formControlName="brand"></ion-input>
+      </ion-item>
+      <ion-note color="danger"
+        *ngIf="getFormControl('brand')?.hasError('required') && getFormControl('brand')?.touched">
+        La marca es obligatoria
+      </ion-note>
+      <ion-item>
+        <ion-label position="floating">Modelo</ion-label>
+        <ion-input type="text" formControlName="model"></ion-input>
+      </ion-item>
+      <ion-note color="danger"
+        *ngIf="getFormControl('model')?.hasError('required') && getFormControl('model')?.touched">
+        El modelo es obligatorio
+      </ion-note>
+    </div>
 
-    <ion-item>
-      <ion-label position="floating">Modelo</ion-label>
-      <ion-input type="text" formControlName="model"></ion-input>
-    </ion-item>
-    <ion-note color="danger" *ngIf="getFormControl('model')?.hasError('required') && getFormControl('model')?.touched">
-      El modelo es obligatorio
-    </ion-note>
-
-    <ion-button type="submit" [disabled]="!carForm.valid">agregar coche</ion-button>
+    <ion-button color="carapp" type="submit" [disabled]="!carForm.valid">agregar coche</ion-button>
   </form>
 
 </ion-content>
