--- a/frontEnd/src/app/cars-list/modal/modal.component.html
+++ b/frontEnd/src/app/cars-list/modal/modal.component.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-button color="medium" (click)="cancel()">Cancelar</ion-button>
     </ion-buttons>
-    <ion-title>Editar el coche</ion-title>
+    <ion-title class="ion-text-center">Editar el coche</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="confirm()" shape="default" fill="solid" color="warning">Actualizar</ion-button>
+      <ion-button (click)="confirm()" color="update " [strong]="true">Actualizar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
