--- a/frontEnd/src/app/cars-list/cars-list.page.html
+++ b/frontEnd/src/app/cars-list/cars-list.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true" collapse="fade">
   <ion-toolbar>
-    <ion-title class="ion-text-center" color="carapp">CarZone</ion-title>
+    <ion-title class="ion-text-center" color="carapp" i>CarZone</ion-title>
   </ion-toolbar>
 </ion-header>
 
