--- a/frontEnd/src/theme/variables.scss
+++ b/frontEnd/src/theme/variables.scss
@@ -1,7 +1,7 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
 :root {
-  --ion-font-family: 'Montserrat';
+  --ion-font-family: 'Consolas';
 
   --ion-color-primary: #eaf0f4;
   --ion-color-primary-rgb: 105, 226, 196;
@@ -10,7 +10,7 @@
   --ion-color-primary-shade: #5cc7ac;
   --ion-color-primary-tint: #78e5ca;
   /* Brand color */
-  --ion-color-carapp: #e9a74a;
+  --ion-color-carapp: #31a5ed;
   --ion-color-carapp-rgb: 219, 162, 81;
   --ion-color-carapp-contrast: #000000;
   --ion-color-carapp-contrast-rgb: 0, 0, 0;
@@ -31,7 +31,7 @@
   --ion-color-delete-shade: #e04848;
   --ion-color-delete-tint: #ff6363;
 
-  --ion-background-color: #313131;
+  --ion-background-color: #211f1f;
   --ion-background-color-rgb: 60, 60, 60;
 
   --ion-text-color: #e6e6e6;
@@ -44,7 +44,7 @@
   --ion-text-color-step-250: #bcbcbc;
   --ion-text-color-step-300: #b3b3b3;
   --ion-text-color-step-350: #ababab;
-  --ion-text-color-step-400: #ae926c;
+  --ion-text-color-step-400: #9ec3e1;
 
 
   --ion-background-color-step-50: #454545;
