--- a/frontEnd/src/app/cars-list/cars-list.page.html
+++ b/frontEnd/src/app/cars-list/cars-list.page.html
@@ -24,18 +24,16 @@
             <ion-label color="dark">
               <h2>Marca</h2>
               <p>Modelo</p>
-              <p>Año</p>
-              <p>Motor</p>
-              <p>Puertas</p>
               <p>Combustible</p>
+              <p>Año</p>
+              <p>Fuerza</p>
             </ion-label>
             <ion-label color="dark">
               <h2>{{c.brand}}</h2>
               <p>{{c.model}}</p>
-              <p>{{c.model}}</p>
-              <p>{{c.model}}</p>
-              <p>{{c.model}}</p>
-              <p>{{c.model}}</p>
+              <p>{{c.fuel}}</p>
+              <p>{{c.year}}</p>
+              <p>{{c.hs}}</p>
             </ion-label>
           </div>
         </div>
