--- a/frontEnd/src/app/cars-list/modal/modal.component.html
+++ b/frontEnd/src/app/cars-list/modal/modal.component.html
@@ -16,4 +16,14 @@
   <ion-item>
     <ion-input labelPlacement="stacked" label="Modelo" [(ngModel)]="model" placeholder="Modelo del coche"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-input labelPlacement="stacked" label="Combustible" [(ngModel)]="fuel"
+      placeholder="Combustible del coche"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input labelPlacement="stacked" label="Año" [(ngModel)]="year" placeholder="Año del coche"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input labelPlacement="stacked" label="Fuerza" [(ngModel)]="hs" placeholder="Fuerza del coche"></ion-input>
+  </ion-item>
 </ion-content>
