home page images

--- a/frontEnd/src/app/home/home.page.html
+++ b/frontEnd/src/app/home/home.page.html
@@ -12,3 +12,29 @@
     <ion-button expand="block" (click)="gotoCarsForm()">Crear coche</ion-button>
     <ion-button expand="block" (click)="gotoCarsList()">Ver los coches</ion-button>
   </div>
+  <div>
+    <h1>CarZone, el lugar para obtenr informacion de los coches</h1>
+    <div class="images">
+      <div class="card">
+        <img src="../../assets/images/car1.jpg" alt="coche deportivo 1">
+        <div class="card-info">
+          <span>Opel Mokka</span>
+          <p>El mejor coche del momento </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="../../assets/images/car2.jpg" alt="coche deportivo 1">
+        <div class="card-info">
+          <span>Peugeot 3008</span>
+          <p>Nuevo modelo 2024</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="../../assets/images/car3.jpg" alt="coche deportivo 1">
+        <div class="card-info">
+          <span>Mclaren</span>
+          <p>El coche deportivo de este año </p>
+        </div>
+      </div>
+    </div>
+  </div>
