--- a/frontEnd/src/app/home/home.page.scss
+++ b/frontEnd/src/app/home/home.page.scss
@@ -25,3 +25,38 @@
 #container a {
   text-decoration: none;
 }
+
+.card {
+  background-color: rgba(255, 255, 255, 0.155);
+  border-radius: 0.5rem;
+}
+
+.images {
+  padding-top: 2rem;
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  gap: 2rem;
+}
+
+img {
+  border-radius: 0.5rem 0.5rem 0 0;
+  width: 300px;
+  height: 180px;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  padding: 0.5rem;
+}
+
+p {
+  font-size: small;
+}
+
+span {
+  font-size: larger;
+  font-weight: 600;
+}
